<resources>
    <string name="app_name">DeveloperToDo</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_download">Download</string>
    <string name="select_items">Select items</string>
    <string name="items_selected">Items selected: </string>
    <string name="title_activity_add_edit">AddEditActivity</string>
    <string name="new_task">New task:</string>
    <string name="hint_new_task">e.g. add main activity</string>
    <string name="estimated_time">Estimated time:</string>
    <string name="save">Save</string>
    <string name="todo_added">ToDo added</string>
    <string name="todo_updated">ToDo updated</string>
    <string name="delete_dialog_question">Are you sure to delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="todos_deleted">Todo(s) deleted</string>
    <string name="todo_task">ToDo task</string>
    <string name="time">Estimated time</string>
    <string name="error_fill_in">Please fill in the field</string>
    <string name="error_too_big_number">Please type in reasonable time</string>
    <string name="error_input">Please correct your input</string>
    <string name="error_network">Networking failed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
