<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".implementation.ui.activities.MainActivity">
    <item
       android:title="@string/action_add"
        android:id="@+id/action_add"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_note_add_black_48dp">

    </item>

    <item
        android:id="@+id/action_download"
        android:title="@string/action_download"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_download">

    </item>


    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
